--- a/stlseries/stl_map/styles/index.css
+++ b/stlseries/stl_map/styles/index.css
@@ -1,9 +1,15 @@
 .footnotes-sep {
-  @apply mt-5 opacity-10;
+  @apply mt-3 opacity-10;
 }
 .footnotes {
   @apply text-sm opacity-75;
 }
 .footnote-backref {
   display: none;
+}
+.col-left {
+  @apply mr-4;
+}
+.col-right {
+  @apply ml-4;
 }
